cambio de inicioblabla
lll

--- a/Index.html
+++ b/Index.html
@@ -16,7 +16,7 @@
 		 <h1 class="nommenu" style = "font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif">Menú</h1>
 	    <img src="img/bx-menu.svg" alt="" class="menu">
 	    <nav class="menu-navegacion" >
-		     <a href="#inicio">Inicio</a>
+		     <a href="#inicio">Inicio blaabla</a>
 			 <a href="#servicio">¿Quienes somos?</a>
 			 <a href="#portafolio">Portafolio</a>
 			 <a href="#experto">Nuestros Servicios</a>
