--- a/index.html
+++ b/index.html
@@ -325,10 +325,42 @@
   </section>
 
 
+<!----chat facebook- -->
+<!-- Load Facebook SDK for JavaScript -->
+<div id="fb-root"></div>
+<script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      xfbml            : true,
+      version          : 'v9.0'
+    });
+  };
+
+  (function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/es_LA/sdk/xfbml.customerchat.js';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
+<!-- Your Chat Plugin code -->
+<div class="fb-customerchat"
+  attribution=setup_tool
+  page_id="106037284683897"
+theme_color="#0A7CFF"
+logged_in_greeting="¿Hola como podemos ayudarte?"
+logged_out_greeting="¿Hola como podemos ayudarte?">
+</div>
+
+<!-------fin-->
+
+
 
   
   <footer class="footer text-center">
     <div class="container">
+
     
       <p class="text-muted small mb-0">Creado 2020</p>
       <p class="text-muted small mb-0"> <a href="" target="_balnk"></p>
