--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
         <div class="col-sm-10 col-md-5 col-lg-5">
           <div class="contact-wrapper ">
             <div class="address-block border-bottom ">
-              <3 class="add-title">COLON,QUERETARO</h3>
+              <h3 class="add-title">COLON,QUERETARO</h3>
               <div class="c-detail ">
                 <span class="c-icon"><i class="fa fa-map-marker" style="font-size:40px;color:red;" aria-hidden="true"></i></span><span class="c-info">&nbsp;Av Constituyentes,el salitre,soriano,Colon,Qro</span>
               </div>
