--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="container content-wrap text-center">
       <h1>Bootstrap Template</h1>
       <h3>
-          <em>A Bootstrap Theme to start building a new landing page</em>
+          <em>A Bootstrapccccc Theme to start building a new landing page</em>
         </h3>
       <a class="btn btn-primary btn-xl smooth-scroll" href="#About">Find Out More</a>
     </div>
