--- a/index.html
+++ b/index.html
@@ -54,16 +54,20 @@
     </ul>
   </nav>
   <!-- Header Starts -->
+  
+  <header class="header">
   <section id="Banner" class="content-section">
     <div class="container content-wrap text-center">
-      <h1>Bootstrap Template</h1>
+      <h1>CodeWeb</h1>
       <h3>
-          <em>A Bootstrapccccc Theme to start building a new landing page</em>
+          <em>Technologies</em>
         </h3>
-      <a class="btn btn-primary btn-xl smooth-scroll" href="#About">Find Out More</a>
+      <a class="btn btn-primary btn-xl smooth-scroll" href="#About">Conoce más</a>
     </div>
     <div class="overlay"></div>
   </section>
+
+  </header>
   <!-- Header Ends -->
   <!-- About Us Starts -->
   <section id="About" class="content-section">
@@ -78,6 +82,8 @@
       </div>
     </div>
   </section>
+</header>
+<!-- Header Ends -->
   <!-- About Us Starts -->
   <section id="Services" class="content-section text-center">
     <div class="container">
