--- a/camaras.html
+++ b/camaras.html
@@ -23,7 +23,7 @@
 
  
   <div class="grid-container">     
-     <!---carousel---->
+     <!---carouscel---->
 
 
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -34,24 +34,26 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="images/CodeWeb_logo.jpg" alt="First slide">
+          
+          <img class="d-block w-100" src="images/crousel.gif" alt="Second slide">
+       
           <div class="carousel-caption d-none d-md-block">
-            <h5>Camaras Inteligente</h5>
-            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+            <h5 class="color1">Camaras Inteligente</h5>
+            <p class="color1">Conexion wifi,Audiobidirecional, Seguimiento de personas.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="images/p-four.jpeg" alt="Second slide">
+          <img class="d-block w-100" src="images/videoportero.gif" alt="Second slide">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Camaras Inteligente</h5>
-            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+            <h5 class="color1">VideoPorteros</h5>
+            <p class="color1">Con  app movil,Compatible con timbreT130A y conexion wifi.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="images/p-six.jpeg" alt="Third slide">
+          <img class="d-block w-100" src="images/alarmas.gif" alt="Third slide">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Camaras Inteligente</h5>
-            <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur.</p>
+            <h5 class="color1">Alarmas Inteligente</h5>
+            <p class="color1">Sistema de Alarma Inteligente con Conexión Wifi y GSM Manejo por App.</p>
           </div>
         </div>
       </div>
