--- a/camaras.html
+++ b/camaras.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Camaras de  Video Vigilancia">
   <meta name="author" content="">
-  <link rel="icon" type="image/png" href="images/CodeWeb_logo.jpg" sizes="16x16" />
+  <link rel="icon" type="image/png" href="images/log.png" sizes="16x16" />
   <title>Camaras cctv</title>
 
   <link href="styles/bootstrap.min.css" rel="stylesheet">
