--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-  <link rel="icon" type="image/png" href="images/favicon-32x32.png" sizes="32x32" />
-  <link rel="icon" type="image/png" href="images/favicon-16x16.png" sizes="16x16" />
-  <title>Travel</title>
+  <link rel="icon" type="image/png" href="images/log.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="images/logo.png" sizes="16x16" />
+  <title>CodeWeb</title>
   <!--stylesheet-->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,900" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -23,7 +23,7 @@
 <body id="page-top">
   <!-- Navigation -->
   <div class="logo">
-    <i class="fa fa-plane" aria-hidden="true"><span>Travel</span></i>
+    <img src="images/CodeWeb_logo.jpg" alt="" width="200px" > 
   </div>
   <a class="menu-toggle rounded" href="#">
     <i class="fa fa-bars"></i>
@@ -34,16 +34,16 @@
         <a class="smooth-scroll" href="#Header"></a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="smooth-scroll" href="#page-top">Home</a>
+        <a class="smooth-scroll" href="#page-top">INICIO</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="smooth-scroll" href="#About">About</a>
+        <a class="smooth-scroll" href="#About">QUIEN SOMOS?</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="smooth-scroll" href="#Services">Services</a>
+        <a class="smooth-scroll" href="#Services">SERVICIOS</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="smooth-scroll" href="#Portfolio">Portfolio</a>
+        <a class="smooth-scroll" href="#Portfolio">nuestros trabajos</a>
       </li>
       <li class="sidebar-nav-item">
         <a class="smooth-scroll" href="#Testimonials">Testimonials</a>
@@ -54,16 +54,20 @@
     </ul>
   </nav>
   <!-- Header Starts -->
+  
+  <header class="header">
   <section id="Banner" class="content-section">
     <div class="container content-wrap text-center">
-      <h1>Bootstrap Template</h1>
+      <h1>CodeWeb</h1>
       <h3>
-          <em>A Bootstrap Theme to start building a new landing page</em>
+          <em>Technologies</em>
         </h3>
-      <a class="btn btn-primary btn-xl smooth-scroll" href="#About">Find Out More</a>
+      <a class="btn btn-primary btn-xl smooth-scroll" href="#About">Conoce más</a>
     </div>
     <div class="overlay"></div>
   </section>
+
+  </header>
   <!-- Header Ends -->
   <!-- About Us Starts -->
   <section id="About" class="content-section">
@@ -71,13 +75,15 @@
       <div class="row">
         <div class="col-lg-12">
           <div class="block-heading">
-            <h2>About Us</h2>
+            <h2>Quienes somos?</h2>
           </div>
           <p class="lead">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
         </div>
       </div>
     </div>
   </section>
+</header>
+<!-- Header Ends -->
   <!-- About Us Starts -->
   <section id="Services" class="content-section text-center">
     <div class="container">
