--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
   <link rel="icon" type="image/png" href="images/log.png" sizes="32x32" />
-  <link rel="icon" type="image/png" href="images/logo.png" sizes="16x16" />
+  <link rel="icon" type="image/png" href="images/log.png" sizes="16x16" />
   <title>CodeWeb</title>
   <!--stylesheet-->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,900" rel="stylesheet">
@@ -43,13 +43,13 @@
         <a class="smooth-scroll" href="#Services">SERVICIOS</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="smooth-scroll" href="#Portfolio">nuestros trabajos</a>
+        <a class="smooth-scroll" href="#Portfolio">NUESTROS TRABAJOS</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="smooth-scroll" href="#Testimonials">Testimonials</a>
+        <a class="smooth-scroll" href="#Testimonials">FUNDADORES</a>
       </li>
       <li class="sidebar-nav-item">
-        <a class="smooth-scroll" href="#Contact">Contact</a>
+        <a class="smooth-scroll" href="#Contact">CONTACTO</a>
       </li>
     </ul>
   </nav>
@@ -88,30 +88,34 @@
   <section id="Services" class="content-section text-center">
     <div class="container">
       <div class="block-heading">
-        <h2>What We Offer</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+        <h2>SERVICIOS</h2>
+        <p>Los clientes no compran productos o servicios compran SOLUCIONE.</p>
       </div>
       <div class="row">
         <div class="col-md-3 col-sm-6">
-          <div class="service-box">
-            <div class="service-icon yellow">
+          <a href="./camaras.html">
+          <div class="service-box" >
+            <div class="service-icon yellow">  
               <div class="front-content">
-                <i class="fa fa-globe" aria-hidden="true"></i>
-                <h3>Family Travel</h3>
+                <i class="fa fa-play" aria-hidden="true"></i>
+                <h3>VENTA E INSTALACION DE CCTV</h3>
               </div>
             </div>
             <div class="service-content">
-              <h3>Family Travel</h3>
+              <h3>VENTA E INSTALACION </h3>
               <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text</p>
             </div>
           </div>
+        </a>
         </div>
         <div class="col-md-3 col-sm-6">
+          <a href="./soporte.html">
           <div class="service-box">
+          
             <div class="service-icon orange">
               <div class="front-content">
-                <i class="fa fa-suitcase"></i>
-                <h3>Business Travel</h3>
+                <i class="fa fa-desktop"></i>
+                <h3>REPARACION DE PC</h3>
               </div>
             </div>
             <div class="service-content">
@@ -119,13 +123,14 @@
               <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text</p>
             </div>
           </div>
+          </a>
         </div>
         <div class="col-md-3 col-sm-6">
           <div class="service-box ">
             <div class="service-icon red">
               <div class="front-content">
-                <i class="fa fa-male" aria-hidden="true"></i>
-                <h3>Solo Travel</h3>
+                <i class="fa fa-code" aria-hidden="true"></i>
+                <h3>DISEÑO WEB</h3>
               </div>
             </div>
             <div class="service-content">
@@ -138,8 +143,8 @@
           <div class="service-box">
             <div class="service-icon grey">
               <div class="front-content">
-                <i class="fa fa-users"></i>
-                <h3>Camping</h3>
+                <i class="fa fa-plug"></i>
+                <h3>ACCESORIOS</h3>
               </div>
             </div>
             <div class="service-content">
@@ -289,7 +294,7 @@
         <p class="h">nos encontramos  donde  mas nos necesita.</p>
       </div>
       <div class="row">
-        <div class="col-sm-10 col-md-5 col-lg-5">
+        <div class="col-sm-7 col-md-6 col-lg-6">
           <div class="contact-wrapper ">
             <div class="address-block border-bottom ">
               <h3 class="add-title">COLON,QUERETARO</h3>
