--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
           </div>
         </div>
         <div class="col-md-3 col-sm-6">
+          <a href="./accesorios.html">
           <div class="service-box">
             <div class="service-icon grey">
               <div class="front-content">
@@ -152,10 +153,12 @@
               <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text</p>
             </div>
           </div>
+          </a>
         </div>
       </div>
     </div>
   </section>
+  
   <section class="content-section text-center" id="Portfolio">
     <div class="container">
       <div class="block-heading">
