--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
     <div class="container content-wrap text-center">
       <h1>CodeWeb</h1>
       <h3>
-          <em>Technologies</em>
+          <em>Tech
+
+          </em>
         </h3>
       <a class="btn btn-primary btn-xl smooth-scroll" href="#About">Conoce más</a>
     </div>
@@ -77,7 +79,7 @@
           <div class="block-heading">
             <h2>Quienes somos?</h2>
           </div>
-          <p class="lead">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
+          <p class="lead">Somos un negocio que esta dedicado a ofreser soluciones en cada productos que ofrecemos</p>
         </div>
       </div>
     </div>
