--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
             <div class="address-block border-bottom ">
               <h3 class="add-title">COLON,QUERETARO</h3>
               <div class="c-detail ">
-                <span class="c-icon"><i class="fa fa-map-marker" style="font-size:40px;color:red;" aria-hidden="true"></i></span><span class="c-info">&nbsp;Av Constituyentes,el salitre,soriano,Colon,Qro</span>
+                <span class="c-icon"><i class="fa fa-map-marker" style="font-size:40px;color:red;" aria-hidden="true"></i></span><span class="c-info">&nbsp;CodeWeb <br> Av Constituyentes,el salitre,soriano,Colon,Qro</span>
               </div>
               <div class="c-detail">
                 <span class="c-icon"><i class="fa fa-phone" style="font-size: 40px;color: #004064;" aria-hidden="true"></i></span><span class="c-info">4411298354 - 4191564148</span>
