--- a/camaras.html
+++ b/camaras.html
@@ -8,8 +8,6 @@
   <link rel="icon" type="image/png" href="images/log.png" sizes="16x16" />
   <title>Camaras cctv</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700,900" rel="stylesheet">
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href="styles/bootstrap.min.css" rel="stylesheet">
    <link href="styles/carousel.css" rel="stylesheet">
    <link href="styles/styles.css" rel="stylesheet">
@@ -20,39 +18,8 @@
   <script type="text/javascript" src="scripts/plugins-activate.js"></script>
 
 </head>
-<body id="page-top">
- <!-- Navigation -->
- <div class="logo">
-  <img src="" alt="" width="200px" > 
-</div>
-<a class="menu-toggle rounded" href="#">
-  <i class="fa fa-bars"></i>
-</a>
-<nav id="sidebar-wrapper">
-  <ul class="sidebar-nav">
-    <li class="sidebar-brand">
-      <a class="smooth-scroll" href="#Header"></a>
-    </li>
-    <li class="sidebar-nav-item">
-      <a class="smooth-scroll" href="#page-top">INICIO</a>
-    </li>
-    <li class="sidebar-nav-item">
-      <a class="smooth-scroll" href="#About">QUIENES SOMOS?</a>
-    </li>
-    <li class="sidebar-nav-item">
-      <a class="smooth-scroll" href="#Services">SERVICIOS</a>
-    </li>
-    <li class="sidebar-nav-item">
-      <a class="smooth-scroll" href="#Portfolio">NUESTROS TRABAJOS</a>
-    </li>
-    <li class="sidebar-nav-item">
-      <a class="smooth-scroll" href="#Testimonials">ACCESORIOS</a>
-    </li>
-    <li class="sidebar-nav-item">
-      <a class="smooth-scroll" href="#Contact">CONTACTO</a>
-    </li>
-  </ul>
-</nav>
+<body>
+
 
  
   <div class="grid-container">     
