--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
+  <meta name="description" content="Servicio en reparacción de computadoras, venta e instalación de camaras cctv y diseño web">
   <meta name="author" content="">
   <link rel="icon" type="image/png" href="images/log.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="images/log.png" sizes="16x16" />
@@ -14,12 +14,11 @@
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
   <link href="styles/styles.css" rel="stylesheet" type="text/css">
   <link href="styles/custom-responsive-styles.css" rel="stylesheet" type="text/css">
-  <!--scripts-->
-  <script type="text/javascript" src="scripts/jquery-3.2.1.min.js"></script>
-  <script type="text/javascript" src="scripts/all-plugins.js"></script>
-  <script type="text/javascript" src="scripts/plugins-activate.js"></script>
-</head>
 
+      <!--scripts-->
+   <script type="text/javascript" src="scripts/jquery-3.2.1.min.js"></script>
+   <script type="text/javascript" src="scripts/all-plugins.js"></script>
+   <script type="text/javascript" src="scripts/plugins-activate.js"></script>
 <body id="page-top">
   <!-- Navigation -->
   <div class="logo">
