--- a/index.html
+++ b/index.html
@@ -158,75 +158,77 @@
       </div>
     </div>
   </section>
+  <!---EXPERIENCIAS -->
+
   <section class="content-section text-center" id="Portfolio">
     <div class="container">
       <div class="block-heading">
         <h2>NUESTRAS EXPERIENCIAS</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+       
       </div>
       <div class="portfolio-wrapper clearfix">
-        <a class="each-portfolio" data-fancybox="gallery" href="images/1.jpeg">
+        <a class="each-portfolio" data-fancybox="gallery" href="images/11.jpg" width="50px" height="50px">
           <div class="content hover-cont-wrap">
             <div class="content-overlay"></div>
-            <img class="content-image" src="images/1.jpeg">
+            <img class="content-image" src="images/11.jpg" width="50px" height="50px">
             <div class="content-details fadeIn-bottom">
-              <h5 class="p-title">CAMARAS IP</h5>
-              <p class="p-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              <h5 class="p-title"></h5>
+              <p class="p-desc"></p>
               <span class="zoom"><i class="fa fa-search-plus"></i></span>
             </div>
           </div>
         </a>
-        <a class="each-portfolio" data-fancybox="gallery" href="images/p-three.jpeg">
+        <a class="each-portfolio" data-fancybox="gallery" href="images/22.jpg">
           <div class="content hover-cont-wrap">
             <div class="content-overlay"></div>
-            <img class="content-image" src="images/p-three.jpeg">
+            <img class="content-image" src="images/22.jpg">
             <div class="content-details fadeIn-bottom">
-              <h5 class="p-title">Title</h5>
-              <p class="p-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              <h5 class="p-title"></h5>
+              <p class="p-desc"></p>
               <span class="zoom"><i class="fa fa-search-plus"></i></span>
             </div>
           </div>
         </a>
-        <a class="each-portfolio" data-fancybox="gallery" href="images/1.jpeg">
+        <a class="each-portfolio" data-fancybox="gallery" href="images/33.jpg" >
           <div class="content hover-cont-wrap">
             <div class="content-overlay"></div>
-            <img class="content-image" src="images/p-four.jpeg">
+            <img class="content-image" src="images/33.jpg">
             <div class="content-details fadeIn-bottom">
-              <h5 class="p-title">Title</h5>
-              <p class="p-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              <h5 class="p-title"></h5>
+              <p class="p-desc"></p>
               <span class="zoom"><i class="fa fa-search-plus"></i></span>
             </div>
           </div>
         </a>
-        <a class="each-portfolio" data-fancybox="gallery" href="images/p-five.jpeg">
+        <a class="each-portfolio" data-fancybox="gallery" href="images/44.jpg" >
           <div class="content hover-cont-wrap">
             <div class="content-overlay"></div>
-            <img class="content-image" src="images/p-five.jpeg">
+            <img class="content-image" src="images/44.jpg">
             <div class="content-details fadeIn-bottom">
-              <h5 class="p-title">Title</h5>
-              <p class="p-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              <h5 class="p-title"></h5>
+              <p class="p-desc"></p>
               <span class="zoom"><i class="fa fa-search-plus"></i></span>
             </div>
           </div>
         </a>
-        <a class="each-portfolio" data-fancybox="gallery" href="images/p-six.jpeg">
+        <a class="each-portfolio" data-fancybox="gallery" href="images/55.jpg">
           <div class="content hover-cont-wrap">
             <div class="content-overlay"></div>
-            <img class="content-image" src="images/p-six.jpeg">
+            <img class="content-image" src="images/55.jpg">
             <div class="content-details fadeIn-bottom">
-              <h5 class="p-title">Title</h5>
-              <p class="p-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              <h5 class="p-title"></h5>
+              <p class="p-desc"></p>
               <span class="zoom"><i class="fa fa-search-plus"></i></span>
             </div>
           </div>
         </a>
-        <a class="each-portfolio" data-fancybox="gallery" href="images/p-three.jpeg">
+        <a class="each-portfolio" data-fancybox="gallery" href="images/66.jpg">
           <div class="content hover-cont-wrap">
             <div class="content-overlay"></div>
-            <img class="content-image" src="images/p-three.jpeg">
+            <img class="content-image" src="images/66.jpg">
             <div class="content-details fadeIn-bottom">
-              <h5 class="p-title">Title</h5>
-              <p class="p-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+              <h5 class="p-title"></h5>
+              <p class="p-desc"></p>
               <span class="zoom"><i class="fa fa-search-plus"></i></span>
             </div>
           </div>
@@ -234,6 +236,7 @@
       </div>
     </div>
   </section>
+
   <!-- TESTIMONIALS -->
   <section id="Testimonials" class="content-section">
     <div class="container">
@@ -246,38 +249,52 @@
           <div id="customers-testimonials" class="owl-carousel">
             <div class="item">
               <div class="shadow-effect">
-                <img class="img-circle" src="images/1.jpeg" alt="">
-                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
+                <img class="img-circle" src="images/accesorios/anti1.jpeg" alt="">
+                <p> Ayudan a detectar y eliminar un virus informatico</p>
               </div>
-              <div class="testimonial-name">Sarah Jenks</div>
+              <div class="testimonial-name">Antivirus</div>
             </div>
             <div class="item">
               <div class="shadow-effect">
-                <img class="img-circle" src="images/tangelia.jpg" alt="">
-                <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old</p>
+                <img class="img-circle" src="images/accesorios/cabbletrifacico.jpeg" alt="">
+                <p>Cable de alimentacion para pc, monitor o CPU</p>
               </div>
-              <div class="testimonial-name">Tangelia Ekhoff</div>
+              <div class="testimonial-name">Cable trifásico</div>
             </div>
             <div class="item">
               <div class="shadow-effect">
-                <img class="img-circle" src="images/john-doe.jpg" alt="">
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+                <img class="img-circle" src="images/accesorios/cabletrebol.jpeg" alt="">
+                <p>Cable de corriente para cargador de laptop </p>
               </div>
-              <div class="testimonial-name">John Doe</div>
+              <div class="testimonial-name">Cable trebol</div>
             </div>
             <div class="item">
               <div class="shadow-effect">
-                <img class="img-circle" src="images/amy.jpg" alt="">
-                <p>All the Lorem Ipsum generators on the Internet tend to repeat predefined chunks as necessary, making this the first true generator on the Internet. It uses a dictionary of over 200 Latin words</p>
+                <img class="img-circle" src="images/accesorios/hdmi.jpeg" alt="">
+                <p>cable de video para Pc, TV etc.</p>
               </div>
-              <div class="testimonial-name">Amy Tan</div>
+              <div class="testimonial-name">HDMI</div>
             </div>
             <div class="item">
               <div class="shadow-effect">
-                <img class="img-circle" src="images/daniel.jpg" alt="">
-                <p>Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncover many web sites still in their infancy.</p>
+                <img class="img-circle" src="images/accesorios/utp.jpg" alt="">
+                <p>Para conexiones de red</p>
               </div>
-              <div class="testimonial-name">Daniel Felsted</div>
+              <div class="testimonial-name">Cable UTP</div>
+            </div>
+            <div class="item">
+              <div class="shadow-effect">
+                <img class="img-circle" src="images/accesorios/rj45.jpeg" alt="">
+                <p>Permite conectar diferentes dispositivos por medio de un  cable</p>
+              </div>
+              <div class="testimonial-name">Conector RJ45</div>
+            </div>
+            <div class="item">
+              <div class="shadow-effect">
+                <img class="img-circle" src="images/accesorios/memo1.jpeg" alt="">
+                <p>Dispositivo de almacenamiento</p>
+              </div>
+              <div class="testimonial-name">Memoras USB</div>
             </div>
           </div>
         </div>
@@ -307,7 +324,7 @@
                 <span class="c-icon"><i class="fa fa-phone" style="font-size: 40px;color: #004064;" aria-hidden="true"></i></span><span class="c-info">4411298354 - 4191564148</span>
               </div>
               <div class="c-detail">
-                <span class="c-icon"><i class="fa fa-envelope" style="font-size: 40px;color: #fec82e;" aria-hidden="true"></i></span><span class="c-info">email@yourdomain.com</span>
+                <span class="c-icon"><i class="fa fa-envelope" style="font-size: 40px;color: #fec82e;" aria-hidden="true"></i></span><span class="c-info">codewebtecnologies2021@gmail.com</span>
               </div>
               <br>
               <p>Puede Ponerse en Contacto en las Siguientes redes con un Clik...</p>
